adaptive for page-404

--- a/module/_arrow-right/_arrow-right.scss
+++ b/module/_arrow-right/_arrow-right.scss
@@ -5,6 +5,9 @@
   border-radius: 50%;
   position: relative;
   transition: all .3s;
+  &--hover {
+    background: $link-hover;
+  }
   &:hover {
     background: $link-hover;
   }
