--- a/module/_header/_header--main.njk
+++ b/module/_header/_header--main.njk
@@ -9,26 +9,26 @@
         </button>
         <ul class="menu__list">
           <li class="menu__item">
-            <a class="menu__item-link" href="index.html#catalog">Catalog</a>
+            <a class="menu__item-link menu__item-link--main" href="#catalog">Catalog</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="index.html#set">Set</a>
+            <a class="menu__item-link menu__item-link--main" href="#set">Set</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="index.html#blog">Blog</a>
+            <a class="menu__item-link menu__item-link--main" href="#blog">Blog</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="index.html#reviews">Reviews</a>
+            <a class="menu__item-link menu__item-link--main" href="#reviews">Reviews</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link" href="index.html#shop">Shop</a>
+            <a class="menu__item-link menu__item-link--main" href="#shop">Shop</a>
           </li>
           <li class="menu__item">
-            <a class="menu__item-link menu__item-link--contacts" href="#contacts">Contacts</a>
+            <a class="menu__item-link menu__item-link--main" href="#contacts">Contacts</a>
           </li>
         </ul>
       </nav>
-      <a class="logo" href="index.html#home">
+      <a class="logo logo--main" href="#home">
         <img clsss="logo__img" src="images/logo.svg" alt="logo">
       </a>
       <div class="header__contacts">
