--- a/module/_set/_set.njk
+++ b/module/_set/_set.njk
@@ -47,7 +47,7 @@
               </div>
             </div>
           </div>
-          <a class="set-slider__box-link" href="#">
+          <a class="set-slider__box-link" href="page-404.html">
             <span>Assemble the tea set</span>
             {% include "app/module/_arrow-right/_arrow-right.njk" %}
           </a>
