--- a/module/_blog/_blog.njk
+++ b/module/_blog/_blog.njk
@@ -8,7 +8,7 @@
       <div class="blog__inner">
         <ul class="blog__list">
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">Milk oolong - how the famous tea is made</h3>
               <p class="blog__item-text">
                 Milk oolong is a Chinese tea, a favorite of Europeans. It was the oolongs that became the first ceremonial teas.
@@ -17,7 +17,7 @@
             </a>
           </li>
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">Tea ceremony in China</h3>
               <p class="blog__item-text">
                 The tea ceremony originated in China and only a few centuries later its attributes successfully migrated first to Japanese.
@@ -26,7 +26,7 @@
             </a>
           </li>
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">Puerh properties - 16 points of benefit</h3>
               <p class="blog__item-text">
                 The Chinese are very attentive to physical and emotional health. This is one of the reasons why they drink pu-erh with such pleasure.
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li class="blog__item">
-            <a class="blog__item-link" href="#">
+            <a class="blog__item-link" href="page-404.html">
               <h3 class="blog__item-title">How to store tea at home</h3>
               <p class="blog__item-text">
                 To keep your tea always tasty, and you can please yourself or surprise guests at any time, store it correctly.
