--- a/module/_footer/_footer--main.njk
+++ b/module/_footer/_footer--main.njk
@@ -4,7 +4,7 @@
       <h2 class="footer__title title">Contacts</h2>
       <div class="footer__inner">
         <div class="footer__item">
-          <a class="logo" href="index.html#home">
+          <a class="logo" href="#home">
             <img clsss="logo__img" src="images/logo.svg" alt="logo">
           </a>
           <div class="footer__open">
@@ -23,19 +23,19 @@
           <h5 class="footer__item-title">Information</h5>
           <ul class="footer__list">
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="index.html#catalog">Catalog</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#catalog">Catalog</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="index.html#set">Set</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#set">Set</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="index.html#blog">Blog</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#blog">Blog</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="index.html#reviews">Reviews</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#reviews">Reviews</a>
             </li>
             <li class="footer__list-item">
-              <a class="footer__list-link menu__item-link" href="index.html#shop">Shop</a>
+              <a class="footer__list-link menu__item-link menu__item-link--main" href="#shop">Shop</a>
             </li>
             <li class="footer__list-item">
               <a class="footer__list-link menu__item-link" href="#contacts">Contacts</a>
