--- a/module/_header/_header.scss
+++ b/module/_header/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  margin-top: 33px;
   @extend %Montserrat-400;
   &__inner {
     display: flex;
@@ -7,8 +6,6 @@
     align-items: flex-end;
     max-width: 100%;
     padding: 30px 40px 50px;
-    border: $border;
-    border-bottom: none;
   }
   &__address {
     position: relative;
@@ -37,6 +34,12 @@
   }
   .logo {
     width: 151px;
+    margin: 0 auto;
+  }
+  &__line {
+    max-width: 1440px;
+    height: 1px;
+    background-color: #BCBBBB;
     margin: 0 auto;
   }
 }
@@ -101,16 +104,9 @@
     transform: translateY(-9px) rotate(-45deg) scaleX(.8);
   }
 }
-// ---------------------------------------------------1410-----------------------------------------------------
-@media (max-width: 1410px) {
-  .header {
-    margin-top: 23px;
-  }
-}
 // ---------------------------------------------------1360-----------------------------------------------------
 @media (max-width: 1360px) {
   .header {
-    margin-top: 15px;
     &__inner {
       flex-wrap: wrap;
       padding: 25px 35px 30px;
@@ -142,7 +138,7 @@
     &__usernav {
       right: 25px;
     }
-    &__phone {
+    .phone {
       margin-left: 20px;
     }
   }
@@ -158,7 +154,7 @@
     &__inner {
       padding: 14px 17px 15px;
     }
-    &__phone {
+    .phone {
       margin-left: 15px;
     }
     &__usernav {
@@ -177,10 +173,8 @@
 // ---------------------------------------------------760-----------------------------------------------------
 @media (max-width: 760px) {
   .header {
-    margin-top: 0;
     &__inner {
       padding: 12px 5px;
-      border: none;
     }
     .logo {
       width: 135px;
